# python-connect-box

./: LICENSE  README.md  README.rst  azure-pipelines.yml  example.py  pyproject.toml  requirements_tests.txt  setup.cfg  setup.py  tox.ini
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: python-app.yml
connect_box/: __init__.py  data.py  exceptions.py  parsers.py
tests/: conftest.py  test_client.py
tests/__snapshots__/: test_client.ambr
tests/cassettes/: test_async_async_toggle_ipv6_filter.yaml  test_async_close_session.yaml  test_async_get_devices.yaml  test_async_get_downstream.yaml  test_async_get_eventlog.yaml  test_async_get_global_settings.yaml  test_async_get_ipv6_filtering.yaml  test_async_get_lanstatus.yaml  test_async_get_temperature.yaml  test_async_get_wanstatus.yaml  test_async_initialize_token.yaml  test_async_reboot_device.yaml
