[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "connect_box"
version = "0.4.0"
description = "Python client for interacting with Compal CH7465LG devices."
readme = "README.rst"
license = "MIT"
authors = [
    { name = "Fabian Affolter", email = "fabian@affolter-engineering.ch" },
]
requires-python = ">=3.13"
dependencies = [
    "aiohttp<4",
    "attrs",
    "defusedxml",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/home-assistant-ecosystem/python-connect-box"
Download = "https://github.com/home-assistant-ecosystem/python-connect-box/releases"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.isort]
multi_line_output = 4
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88
indent = "    "
force_sort_within_sections = true
sections = ["FUTURE", "STDLIB", "INBETWEENS", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
default_section = "THIRDPARTY"
forced_separate = ["tests"]
combine_as_imports = true
use_parentheses = true

[tool.flake8]
max-line-length = 88
ignore = ["E501", "E203"]
